--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Myod-robotics.GitHub.io</h1>
+      <img src=MYOD.png />
       <h2 class="project-tagline"></h2>
     </section>
 
