--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Myod-robotics.GitHub.io by myod-robotics</title>
+    <title>Myod</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -12,12 +12,13 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Myod-robotics.GitHub.io</h1>
-      <img src=MYOD.png />
       <h2 class="project-tagline"></h2>
     </section>
 
     <section class="main-content">
       <h3>
+              <img src=MYOD.png />
+
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
